src/views/Stake/stake.scss
// ohm-card styles should be set to theme
.ohm-card {
    color: #efefef;
    overflow: hidden;
    max-width: 55vw;
    min-width: 49vw;
    width: 50vw;
    border-radius: .5rem;
    background-color: transparent !important;
    box-shadow: unset !important;
    border: none !important;
    display:flex;
    justify-content:center;
    flex-flow:wrap;
    padding: 0px !important;
    padding-top: 4.20rem !important;
    .card-header {
        position: absolute;
        width: 100%;
        background-color:#42424200 !important;
        box-shadow: none !important;
        border: none !important;
        top: 0;
        h5 {
            font-weight: 550;
            color: #efefef;
            text-decoration: underline;
            text-underline-offset: 10px;
        }
    }
    .card-content {
        width: 100%;
        position: relative;
        display: flex;
        align-items: left;
        justify-content: center;
        border-radius: inherit;
        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
        flex-flow: column;
        padding: 2.5rem 2.5rem;
        height: 100%;
        
    }
    &.primary {
        margin-bottom: 3.3rem;
        min-height: 600px;
        height: auto;
    }
    &.secondary {
        height: auto;
        min-height: 250px;
        margin-bottom: 3.3rem;
    }
}

.stake-top-metrics {
    display: flex;
    width: 100%;
    padding: 0;
    .olympus-sushi {
        flex: 1;
        div {
            line-height: 150%;
        }
        .olympus-logo {
            height: 1.7rem;
            width: 1.7rem;
            display: inline-block;
            vertical-align: middle;
            margin-right: 5px;
            filter: invert(1);
        }
        h3 {
            display: inline;
            margin: 0;
            vertical-align: middle;
            font-size: 1.4rem;
            color: #ffffff;
        }
        a {
            font-size: 0.85rem;
            margin-right: 5px;
        }
        .fa-external-link-alt {
            width: 0.79rem;
            height: 0.79rem;
        }
    }
    .stake-apy, .stake-tvl {
        flex: 1;
        text-align: left;
        h2 {
            font-size: 1.8rem !important;
            line-height: 100%;
        }
        h2:first-of-type {
            color: #D0D0D2;
            margin-bottom: unset;
        }
    }
    .next-rebase {
        flex: 1;
        text-align: right;
    }
}

// overriding original 
.stake-toggle-row {
    margin: 1.5rem 0;
    .btn-group button.btn {
        border: unset;
        color: #fff;
        border-radius: 0;
        border-color: none !important;
        background-color: transparent !important;
        padding: 0 7px !important;
        margin-right: 25px;
        height: 2.2rem;
        &:active,
        &:focus {
            outline: none;
            border: none;
            box-shadow: none;
        }
        &:hover {
            color: #F5DDB4;
        }
    }
    .btn-light {
        border-bottom: 2px solid #F5DDB4 !important;
        color: #F5DDB4 !important;
    }
}



.ohm-logo-bg {
    height: 25px;
    width: 25px;
    border-radius: 20px;
    display: flex;
    background-color: white;    
    vertical-align: middle;
    align-items: center;
    justify-content: center;
    margin-left: 0.7rem;
}

.ohm-logo-tiny {
    height: 15px;
    width: 15px;
    vertical-align: middle;
    background-color: transparent;
}

.logo-holder {
    align-items: center;
    justify-content: center;
    display: flex;
    background-color: #28282822 !important;
    border: 0 !important;
    border-radius: inherit;
    color: #555;
}

.stake-action-row {
    margin-bottom: 10px;
}

.input-group.ohm-input-group {
    width: 48%;
    border: 0.8px solid #FFFFFF;
    border-radius: .5rem !important;
    input, button {
        border-radius: none;
        margin-left: 0 !important;
        background-color: #28282822 !important;
        border: none !important;
        outline: none !important;
        &:focus,
        &:active {
            outline: none !important;
            box-shadow: none !important;
        }
    }
    input {
        border: none !important;
    }
    button {
        border-left: 0 !important;
        border-top-right-radius: inherit !important;
        border-bottom-right-radius: inherit !important;
        background-color: #28282822 !important;

        &:hover {
            color: #F5DDB4 !important;
        }
    }
}

.stake-notification {
    font-size: 0.9rem;
}


.stake-price-data-row {
    .price-label,
    .price-data {
        font-size: 1rem !important;
    }
}

.stake-button {
    display: flex;
    margin-left: 1rem;
    border-radius: .5rem;
    background-color: #ffffffee;
    color: #222;
    font-size: 1rem;
    height: auto;
    font-family: 'Square-Light', cursive;
}

.stake-table {
    thead {
        color: #999999;
    }
    tbody {
        color: #ffffff;
        tr {
            vertical-align: middle;
            font-size: 0.9rem;
            align-items: center;
            .ohm-pairs p {
                align-self: center;
                margin-left: 5px;
                font-size: 1rem;
                font-weight: bold;
            }
        }
        button {
            font-size: .9rem;
            padding: .25rem .65rem;
        }
    }
}

  

  

